--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Lugares Turisticos</title>
 </head>
 <body>
-    
+    <h1>MIS LUGARES TURISTICOS</h1>
+    <hr>
+    <h2>Zoológico de Barranquilla</h2>
+
 </body>
 </html>
