--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Lugares Turisticos</title>
 </head>
 <body>
-    <h1>MIS LUGARES TURISTICOS</h1>
+    <h1>MIS LUGARES TURISTICOS FAVORITOS</h1>
     <hr>
-    <h2>Zoológico de Barranquilla</h2>
+    <h2>1. Zoológico de Barranquilla</h2>
+    <div> <img src="https://cloudfront-us-east-1.images.arcpublishing.com/infobae/A5MLBNTODZDTBBOY46SXJNFN7M.jpg" width="400px"></div>
+    <div>El zoológico de Barranquilla mantiene diversas especies animales para la contemplación del público en Barranquilla, Colombia. Operado por la La Fundación Botánica y Zoológica de Barranquilla, tiene una área de 10 000 m². Cuenta con especies en vía de extinción como el tigre blanco y el oso de anteojos, este último presidente del zoológico elegido por los niños</div>
 
 </body>
 </html>
