--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
     <h2>1. Zoológico de Barranquilla</h2>
     <div>El zoológico de Barranquilla mantiene diversas especies animales para la contemplación del público en Barranquilla, Colombia. Operado por la La Fundación Botánica y Zoológica de Barranquilla, tiene una área de 10 000 m². Cuenta con especies en vía de extinción como el tigre blanco y el oso de anteojos, este último presidente del zoológico elegido por los niños</div>
     <div>Dirección: Cl. 77 #68 - 40, Nte. Centro Historico, Barranquilla, Atlántico</div>
+    <hr>
+    <div> <img src="https://live.staticflickr.com/2746/4108882361_d8da7255a1_b.jpg" width="400px"></div>
+    <h2>2. Minca</h2>
+    <div>Minca es un corregimiento del distrito de Santa Marta, en el departamento del Magdalena, al norte de Colombia. Está ubicada en las estribaciones de la Sierra Nevada de Santa Marta, a unos 15 km del centro de la ciudad. Minca es la capital ecológica de la Sierra Nevada de Santa Marta.</div>
+    <div>Coordenadas: 11°08'37″N 74°07'03″O/ 11.143555555556, -74.1175</div>
+
 </body>
 </html>
