--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <h2>2. Minca</h2>
     <div>Minca es un corregimiento del distrito de Santa Marta, en el departamento del Magdalena, al norte de Colombia. Está ubicada en las estribaciones de la Sierra Nevada de Santa Marta, a unos 15 km del centro de la ciudad. Minca es la capital ecológica de la Sierra Nevada de Santa Marta.</div>
     <div>Coordenadas: 11°08'37″N 74°07'03″O/ 11.143555555556, -74.1175</div>
+    <hr>
+    <div> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT1PPlsbqZlIDzDSsx-HAQFNsXMHWYjKP33qQ&s" width="400px"></div>
+    <h2>3. Bahia Concha</h2>
+    <div>Minca es un corregimiento del distrito de Santa Marta, en el departamento del Magdalena, al norte de Colombia. Está ubicada en las estribaciones de la Sierra Nevada de Santa Marta, a unos 15 km del centro de la ciudad. Minca es la capital ecológica de la Sierra Nevada de Santa Marta.</div>
+    <div>Coordenadas: 11°08'37″N 74°07'03″O/ 11.143555555556, -74.1175</div>
+
 
 </body>
 </html>
