--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <hr>
     <div> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT1PPlsbqZlIDzDSsx-HAQFNsXMHWYjKP33qQ&s" width="400px"></div>
     <h2>3. Bahia Concha</h2>
-    <div>Minca es un corregimiento del distrito de Santa Marta, en el departamento del Magdalena, al norte de Colombia. Está ubicada en las estribaciones de la Sierra Nevada de Santa Marta, a unos 15 km del centro de la ciudad. Minca es la capital ecológica de la Sierra Nevada de Santa Marta.</div>
-    <div>Coordenadas: 11°08'37″N 74°07'03″O/ 11.143555555556, -74.1175</div>
+    <div>Bahia Concha es una hermosa playa en Santa Marta ubicada a solamente 45 minutos  aproximadamente del centro de la ciudad. Es una de las playas más visitadas en Santa Marta y la temperatura de esta playa es perfecta para disfrutar un delicioso baño en sus tranquilas aguas. Esta playa se caracteriza por estar rodeada de montañas, su arena blanca y sus aguas cristalinas. Es una playa extensa y con espectaculares paisajes.</div>
+    <div>Coordenadas: 11°18'34"N   74°9'35"W</div>
 
 
 </body>
