--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
     <h2>4. Castillo de San Felipe de Barajas</h2>
     <div>El Castillo San Felipe de Barajas es una fortificación localizada en la ciudad de Cartagena de Indias en Colombia. Su nombre real es Fuerte de San Felipe de Barajas. Está situado sobre un cerro llamado San Lázaro y fue construido en 1536, y ampliado en 1639 y 1657 durante la época virreinal española. Sufrió constantes asedios por parte de los ingleses y franceses, siendo el comandante francés Barón de Pointis quien tomara el castillo a mediados de 1697. </div>
     <div>Coordenadas: 10°25'20″N 75°32'17″O</div>
+    <hr>
+    <div> <img src="https://minciencias.gov.co/sites/default/files/jardin_botanico_guillermo_pineres.jpg" width="400px"></div>
+    <h2>5. Jardín Botánico de Turbaco</h2>
+    <div>El jardín Botánico de Turbaco (Guillermo Piñeres), un parque de vegetación exuberante dotado de inmensos árboles centenarios, numerosas especies de flores, frutas y aves exóticas. Es una excelente propuesta ecológica y paisajística, para todos aquellos visitantes que son amantes de los planes relajados y tranquilos, pero sobre todo, para quienes anhelan un encuentro verdadero con el medio ambiente.</div>
+    <div>Dirección: Sector Matute km 9 Autopista I-90, Naranjas, Turbaco, Bolívar</div>
 
 
 </body>
